<resources>
    <string name="app_name">鱼鹰</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_ButtonTextYes">确定</string>
    <string name="app_ButtonTextNo">取消</string>
    <string name="app_ButtonTextModify">修改</string>
    <string name="app_ButtonTextAdd">添加</string>
    <string name="app_ButtonTextDelete">删除</string>
    <string name="app_progress">正在请求...</string>
    <string name="app_nextpage">下一页</string>
    <string name="app_ButtonTextSearch">查询</string>
    <string name="app_ButtonTextReset">重置</string>
    <string name="app_ButtonTextClear">清空</string>
    <string name="app_ButtonTextBack">返回</string>
    <string name="app_ButtonTextSave">保存</string>
    <string name="app_ButtonTextSubmit">提交</string>
    <string name="app_warning">温馨提示</string>
    <string name="app_ButtonTextNext">下一步</string>
    <string name="app_search">搜索</string>
    <string name="app_checkversion">检查版本...</string>
    <string name="app_net_error">网络不给力</string>
    <string name="app_loading">加载中,请稍后...</string>
    <string name="app_add_capture_notice">设备二维码，视频二维码卡片</string>
    <string name="app_add_capture_sdtjsxt">手动添加摄像头</string>
    <string name="app_add_capture_smewm">扫描二维码</string>
    <string name="app_base_ts">功能正在建设中</string>
    <string name="os_main_dhb">电话煲</string>
    <string name="os_main_jsh">家生活</string>
    <string name="os_main_csh">车生活</string>
    <string name="os_dhb_syzx_kyk_indicator">看一看</string>
    <string name="os_dhb_syzx_sys_indicator">扫一扫</string>
    <string name="os_dhb_syzx_yyy_indicator">摇一摇</string>
    <string name="os_dhb_syzx_zyz_indicator">转一转</string>
    <string name="os_dhb_syzx_kyk_fdc">房地产</string>
    <string name="os_dhb_syzx_kyk_qc">汽车</string>
    <string name="os_dhb_syzx_kyk_spbj">食品保健</string>
    <string name="os_dhb_syzx_kyk_xjd">小家电</string>
    <string name="os_dhb_syzx_kyk_ylmr">医疗美容</string>
    <string name="os_dhb_syzx_kyk_jjsh">家居生活</string>
    <string name="os_dhb_syzx_kyk_smcp">数码产品</string>
    <string name="os_dhb_syzx_kyk_lycx">旅游出行</string>
    <string name="os_dhb_syzx_tjsp">特价商品</string>
    <string name="os_dhb_syzx_hyp">换一批</string>
    <string name="os_dhb_syzx_zq">赚钱</string>
    <string name="os_dhb_syzx_yq">摇钱</string>
    <string name="os_dhb_syzx_cj">抽奖</string>
    <string name="os_dhb_syzx_zhf">赚话费</string>
    <string name="os_dhb_syzx_zjf">赚积分</string>
    <string name="os_dhb_syzx_qhb">抢红包</string>
    <string name="os_dhb_syzx_cj_qad">亲爱的 </string>
    <string name="os_dhb_syzx_cj_ndjf">，您的</string>
    <string name="os_dhb_syzx_cj_wxts">温馨提示：</string>
    <string name="os_dhb_syzx_cj_ts1">1、欢迎来幸运大转盘碰运气，消耗少量话费，即有机会获取奖励 </string>
    <string name="os_dhb_syzx_cj_ts2">2、不同颜色表示不同奖励类型： </string>
    <string name="os_dhb_syzx_cj_ts3">3、点击“开始抽奖”参加活动，指针指向的数值及对应的颜色，表示您所获得的奖励，快来试试吧 </string>
    <string name="os_dhb_syzx_cj_jf">积分</string>
    <string name="os_dhb_syzx_cj_yy">银元 </string>
    <string name="os_dhb_syzx_cj_hf">话费 </string>
    <string name="os_dhb_syzx_yq_ljgd">了解更多</string>
    <string name="os_csh_qctj">汽车体检</string>
    <string name="os_csh_gj">轨迹</string>
    <string name="os_csh_dzwl">电子围栏</string>
    <string name="os_csh_dh">导航</string>
    <string name="os_csh_wyzx">我要咨询</string>
    <string name="os_csh_jjqz">紧急求助</string>
    <string name="os_csh_zjzd">专家诊断</string>
    <string name="os_csh_sz">设置</string>
    <string name="os_csh_jin">京</string>
    <string name="os_csh_pinpai">品牌</string>
    <string name="os_csh_chexing">车型</string>
    <string name="os_csh_vin">VIN码</string>
    <string name="os_csh_bsx">变速箱</string>
    <string name="os_csh_pl">排量</string>
    <string name="os_csh_nk">年款</string>
    <string name="os_dhb_grzx_jfsc">积分商城</string>
    <string name="os_dhb_grzx_gwc1">购物车</string>
    <string name="os_dhb_grzx_wddd">我的订单</string>
    <string name="os_dhb_grzx_yyk">银元库</string>
    <string name="os_dhb_grzx_jfk">积分库</string>
    <string name="os_dhb_grzx_hfk">话费库</string>
    <string name="os_dhb_grzx_zhcz">账号充值</string>
    <string name="os_dhb_grzx_cxzs">出行助手</string>
    <string name="os_dhb_grzx_zbsh">周边生活</string>
    <string name="os_dhb_grzx_shjf">生活缴费</string>
    <string name="os_dhb_grzx_zxgw">在线购物</string>
    <string name="os_dhb_grzx_grzl">个人资料</string>
    <string name="os_dhb_grzx_dqye">当前余额</string>
    <string name="os_dhb_grzx_gwc">我的订单</string>
    <string name="os_dhb_grzx_my_order">我的订单</string>
    <string name="os_dhb_grzx_hyy">欢迎页</string>
    <string name="os_dhb_grzx_bz">帮助</string>
    <string name="os_dhb_grzx_rjsj">软件升级</string>
    <string name="os_dhb_grzx_gy">关于鱼鹰</string>
    <string name="os_dhb_grzx_dhzx">兑换中心</string>
    <string name="os_dhb_grzx_fx">分享</string>
    <string name="os_dhb_grzx_tcdl">退出登录</string>
    <string name="os_dhb_grzx_bc">保存</string>
    <string name="os_dhb_grzx_nc">昵称</string>
    <string name="os_dhb_grzx_zh">账号</string>
    <string name="os_dhb_grzx_xb">性别</string>
    <string name="os_dhb_grzx_xgmm">修改密码</string>
    <string name="os_dhb_grzx_shr">收货人</string>
    <string name="os_dhb_grzx_lxdh">联系电话</string>
    <string name="os_dhb_grzx_sfdq">省份地区</string>
    <string name="os_dhb_grzx_xxdz">详细地址</string>
    <string name="os_dhb_grzx_yzbm">邮政编码</string>
    <string name="os_dhb_grzx_wxts">温馨提示</string>
    <string name="os_dhb_grzx_sfbcxg">是否保存修改</string>
    <string name="hsc_progress">加载中,请稍等...</string>
    <string name="hsc_welcom_login">登录</string>
    <string name="hsc_welcom_loginrememberpwdtext">记住密码</string>
    <string name="hsc_welcom_reg">免费注册</string>
    <string name="hsc_welcom_register">新用户注册</string>
    <string name="hsc_welcom_registeryzm">请输入你手机收到的6位数验证码</string>
    <string name="hsc_welcom_registersubmit">确认登录</string>
    <string name="hsc_welcom_registerty">同意</string>
    <string name="hsc_welcom_registerxy">鱼鹰应用使用条款与隐私规则</string>
    <string name="hsc_welcom_forgetpwd">忘记密码</string>
	<string name="hsc_welcom_forgetpwdregacount">手机号码:</string>
	<string name="hsc_welcom_forgetpwdnewregpwd">新密码:</string>
	<string name="hsc_welcom_forgetpwdregpwdconfirm">密码确认:</string>
	<string name="hsc_welcom_forgetpwdregyzm">验证码:</string>
	<string name="hsc_welcom_forgetpwdregyzmbtn">获取验证码</string>
	<string name="hsc_welcom_forgetsubmit">确认提交</string>
	<string name="hsc_btn_ty">马上来体验吧</string>
    <string name="os_dhb_php">请输入手机号码，固话前加拨区号</string>
    <string name="os_jsh_wdj_ldss_text1">欢迎使用，您需要准备好</string>
    <string name="os_jsh_wdj_ldss_text2">您需要先将您的手机或者平板连接至WIFI网络，设备WIFI与其在同一局域网中。</string>
    <string name="os_jsh_wdj_ldss_znsxj">智能摄像机</string>
    <string name="os_jsh_wdj_ldss_ljdy">连接电源</string>
    <string name="os_jsh_wdj_ldss_wifi">wifi网络</string>
    <string name="os_jsh_wdj_ldss_wxts">温馨提示：</string>
    <string name="os_jsh_wdj_ldss_bzts">不再提示</string>
    <string name="keyboard_no1">1</string>
    <string name="keyboard_no2">2</string>
    <string name="keyboard_no3">3</string>
    <string name="keyboard_no4">4</string>
    <string name="keyboard_no5">5</string>
    <string name="keyboard_no6">6</string>
    <string name="keyboard_no7">7</string>
    <string name="keyboard_no8">8</string>
    <string name="keyboard_no9">9</string>
    <string name="keyboard_nox">*</string>
    <string name="keyboard_no0">0</string>
    <string name="keyboard_noj">#</string>
    <string name="os_conn_fail">连接失败</string>
    <string name="os_reason">可能的原因：</string>
    <string name="os_connect_failed_reason1">1.输入错误的Wi-Fi密码</string>
    <string name="os_connect_failed_reason2">2.摄像头不支持5G网络</string>
    <string name="os_connect_failed_reason3">3.当前网络环境较差</string>
</resources>