<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    >
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:text="@string/os_conn_fail"
       style="@style/app_textStyle"
       android:layout_gravity="center_horizontal"/>
   <ImageView 
       android:layout_width="239dp"
       android:layout_height="100dp"
       android:layout_marginTop="20dp"
       android:layout_gravity="center_horizontal"
       android:background="@drawable/connect_failed"/>
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:text="@string/os_reason"
       style="@style/app_textStyle2"/>
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/os_connect_failed_reason1"
       style="@style/app_textStyle2"/>
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/os_connect_failed_reason2"
       style="@style/app_textStyle2"/>
    <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/os_connect_failed_reason3"
       style="@style/app_textStyle2"/>
    
</LinearLayout>