<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="30dp"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
            style="@style/app_big_textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/os_jsh_wdj_ldss_text1" />

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/os_jsh_wdj_ldss_introduce_1" />

            <TextView
                style="@style/app_medium_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/os_jsh_wdj_ldss_znsxj" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/os_jsh_wdj_ldss_introduce_2" />

            <TextView
                style="@style/app_medium_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/os_jsh_wdj_ldss_ljdy" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/os_jsh_wdj_ldss_introduce_3" />

            <TextView
                style="@style/app_medium_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/os_jsh_wdj_ldss_wifi" />
        </LinearLayout>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/app_small_textStyle"
                android:text="@string/os_jsh_wdj_ldss_wxts"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/app_small_textStyle"
                android:text="@string/os_jsh_wdj_ldss_text2"/>
            
            <CheckBox 
                android:id="@+id/cb_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginTop="50dp"
                android:button="@drawable/os_jsh_wdj_ldss_check"
                style="@style/app_small_textStyle"
                android:text="@string/os_jsh_wdj_ldss_bzts"/>
            
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_next"
            style="@style/app_big_textStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/app_login_btnbg"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/app_ButtonTextNext" />
        
    </LinearLayout>
    </ScrollView>

</LinearLayout>